--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="static/jquery.min.js"></script>
         <script type="text/javascript" src="static/jquery-ui.min.js"></script>
         <script type="text/javascript" src="static/three.min.js"></script>
+        <script type="text/javascript" src="static/OrbitControls.js"></script>
         <script type="text/javascript" src="static/application.js"></script>
     </head>
     <body>
