--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,11 @@
                 <td class="jog">
                     <table class="full">
                         <tr>
-                            <td colspan="2">
+                            <td class="half">
+                                <h2 class="header">Speed Rate</h2>
+                                <input id="Speed"/>
+                            </td>
+                            <td class="half">
                                 <h2 class="header">Amount of Movement</h2>
                                 <div id="Volume">
                                     <input type="radio" id="Volume_Small" name="Volume" value="small"/><label for="Volume_Small">0.10</label>
