prohibited area check

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,16 @@
                                 <select id="Points" class="points"></select><br/><button id="Move">Move</button>
                             </td>
                         </tr>
-                    </table>
+                        <tr>
+                            <td colspan="2">
+                                <h2 class="header">Area Check</h2>
+                                <div id="Area_Check">
+                                    <input type="radio" id="Area_Check_ON" name="area_check" value="on"/><label for="Area_Check_ON">ON</label>
+                                    <input type="radio" id="Area_Check_OFF" name="area_check" value="off"/><label for="Area_Check_OFF">OFF</label>
+                                </div>
+                            </td>
+                        </tr>
+                     </table>
                 </td>
                 <td>
                     <div id="Canvas" class="canvas"/>
